--- a/OSB with Cursor/index.html
+++ b/OSB with Cursor/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <style> body {padding: 0; margin: 0; background-color: black;} </style>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.min.js" integrity="sha256-bXPU+HvtR3tP1IYHZVEFHzEZ9p5zkY8GLPnOnJXW67k=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.min.js"
-    integrity="sha256-6HSgTo0/jC1Jt6h5Hp9Tnz0u0qV0PLy+TGoR1ThmotU="
-    crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.sound.min.js" integrity="sha256-v5JL40rrlwweVwffHZ2zF70S6fMJizW1N+fwsApop+o=" crossorigin="anonymous"></script>
-    <!-- <script src="../p5.min.js"></script> -->
-    <!-- <script src="../addons/p5.dom.min.js"></script> -->
-    <!-- <script src="../addons/p5.sound.min.js"></script> -->
-    <script src="sketch.js"></script>
-  </head>
-  <body>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+      background-color: black;
+    }
+  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.min.js" integrity="sha256-bXPU+HvtR3tP1IYHZVEFHzEZ9p5zkY8GLPnOnJXW67k=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.dom.min.js" integrity="sha256-6HSgTo0/jC1Jt6h5Hp9Tnz0u0qV0PLy+TGoR1ThmotU=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/addons/p5.sound.min.js" integrity="sha256-v5JL40rrlwweVwffHZ2zF70S6fMJizW1N+fwsApop+o=" crossorigin="anonymous"></script>
+  <script src="sketch.js"></script>
+</head>
+
+<body>
+</body>
+
 </html>
